--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "@types/node": "18.14.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.58.3",
-    "typescript": "4.9.5"
+    "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "typescript": "4.9.5",
+    "@types/react-slick": "^0.23.10",
+    "@types/node": "18.14.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11"
   }
 }
